# tool_inspect_db_to_schema

./: .gitignore  DESIGN.md  Lap_Danh_Muc_Dac_Ta.bat  README.md  Task.md  anh_xa_tu_dien_dung_chung.md  chay_tool.bat  check_output.py  danh_sach_gia_tri_cho_phep.md  database.md  knowleage.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_database.sql  test_parser.py
config/: connections.example.yaml  glossary.yaml
output_dbdt_final/: data_catalog.xlsx
output_test/: data_catalog.xlsx
output_test_final/: data_catalog.xlsx
scratch/: inspect_db.py
src/db_schema_crawler/: __init__.py  cli.py  main.py
src/db_schema_crawler/ai/: __init__.py
src/db_schema_crawler/config/: loader.py  schema.py
src/db_schema_crawler/connector/: base.py  mysql.py  oracle.py
src/db_schema_crawler/crawler/: field_crawler.py  table_crawler.py
src/db_schema_crawler/exporter/: base.py  excel_exporter.py
src/db_schema_crawler/models/: field_schema.py
src/technical_schema_cataloger/: cli.py  main.py
src/technical_schema_cataloger/ai/: llm_client.py
src/technical_schema_cataloger/config/: schema.py
src/technical_schema_cataloger/connector/: __init__.py  base.py  factory.py  mysql.py  oracle.py  (+2 more)
tests/: debug_sqlserver_dates.py  final_check_app_logic.py  test_column_precision.py  test_config_loader.py  test_connector.py  test_connectors_logic.py  test_exporter.py  test_field_crawler.py  test_hybrid_resolvers.py  test_llm_client.py  test_main.py  test_models.py  test_sqlserver_diagnostic.py  test_table_crawler.py
tests/fixtures/: mock_mysql_data.py
(+4 files in other folders)
